fix spacing of sponsor logos

--- a/iNZight/css/main.css
+++ b/iNZight/css/main.css
@@ -1444,7 +1444,7 @@ th {
 
 html {
   font-size: 10px;
-  -webkit-tap-highlight-color: rgba(0, 0, 0, 0); }
+  -webkit-tap-highlight-color: transparent; }
 
 body {
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
@@ -6595,7 +6595,7 @@ button.close {
   color: #fff;
   text-align: center;
   text-shadow: 0 1px 2px rgba(0, 0, 0, 0.6);
-  background-color: rgba(0, 0, 0, 0);
+  background-color: transparent;
   filter: alpha(opacity=50);
   opacity: .5; }
 
@@ -6677,7 +6677,7 @@ button.close {
   text-indent: -999px;
   cursor: pointer;
   background-color: #000 \9;
-  background-color: rgba(0, 0, 0, 0);
+  background-color: transparent;
   border: 1px solid #fff;
   border-radius: 10px; }
 
@@ -8014,12 +8014,11 @@ h1.header-image, h2.header-image, h3.header-image {
 .sponsors {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-around;
+  justify-content: center;
   align-items: center;
-  max-width: 800px;
   margin: 0 auto; }
   .sponsors a {
-    margin: 10px 30px; }
+    margin: 10px 30px 20px; }
   .sponsors img {
     height: 100px; }
 
